Proj3/y.output
   0  $accept : file $end

   1  file :
   2       | file error ';'
   3       | file public tipo ID ';'
   4       | file public CONST tipo ID ';'
   5       | file public tipo ID init
   6       | file public CONST tipo ID init

   7  $$1 :

   8  file : file public tipo ID $$1 finit

   9  $$2 :

  10  file : file public VOID ID $$2 finit

  11  public :
  12         | PUBLIC

  13  ptr :
  14      | '*'

  15  tipo : INTEGER ptr
  16       | STRING ptr
  17       | NUMBER ptr

  18  init : ATR ID ';'
  19       | ATR INT ';'
  20       | ATR '-' INT ';'
  21       | ATR STR ';'
  22       | ATR CONST STR ';'
  23       | ATR REAL ';'
  24       | ATR '-' REAL ';'

  25  finit : '(' params ')' blocop
  26        | '(' ')' blocop

  27  blocop : ';'
  28         | bloco ';'

  29  params : param
  30         | params ',' param

  31  $$3 :

  32  bloco : '{' $$3 decls list end '}'

  33  decls :
  34        | decls param ';'

  35  param : tipo ID

  36  stmt : base
  37       | brk

  38  base : ';'

  39  $$4 :

  40  base : DO $$4 stmt WHILE expr ';'

  41  $$5 :

  42  base : FOR lv IN expr UPTO expr step DO $$5 stmt

  43  $$6 :

  44  base : FOR lv IN expr DOWNTO expr step DO $$6 stmt
  45       | IF expr THEN stmt
  46       | IF expr THEN stmt ELSE stmt
  47       | expr ';'
  48       | bloco
  49       | lv '#' expr ';'
  50       | error ';'

  51  end :
  52      | brk

  53  brk : BREAK intp ';'
  54      | CONTINUE intp ';'

  55  step :
  56       | STEP expr

  57  intp :
  58       | INT

  59  list : base
  60       | list base

  61  args : expr
  62       | args ',' expr

  63  lv : ID
  64     | ID '[' expr ']'

  65  expr : lv
  66       | '*' lv
  67       | lv ATR expr
  68       | INT
  69       | STR
  70       | REAL
  71       | '-' expr
  72       | '~' expr
  73       | '&' lv
  74       | expr '!'
  75       | INCR lv
  76       | DECR lv
  77       | lv INCR
  78       | lv DECR
  79       | expr '+' expr
  80       | expr '-' expr
  81       | expr '*' expr
  82       | expr '/' expr
  83       | expr '%' expr
  84       | expr '<' expr
  85       | expr '>' expr
  86       | expr GE expr
  87       | expr LE expr
  88       | expr NE expr
  89       | expr '=' expr
  90       | expr '&' expr
  91       | expr '|' expr
  92       | '(' expr ')'
  93       | ID '(' args ')'
  94       | ID '(' ')'

state 0
	$accept : . file $end  (0)
	file : .  (1)

	.  reduce 1

	file  goto 1


state 1
	$accept : file . $end  (0)
	file : file . error ';'  (2)
	file : file . public tipo ID ';'  (3)
	file : file . public CONST tipo ID ';'  (4)
	file : file . public tipo ID init  (5)
	file : file . public CONST tipo ID init  (6)
	file : file . public tipo ID $$1 finit  (8)
	file : file . public VOID ID $$2 finit  (10)
	public : .  (11)

	$end  accept
	error  shift 2
	PUBLIC  shift 3
	VOID  reduce 11
	INTEGER  reduce 11
	STRING  reduce 11
	NUMBER  reduce 11
	CONST  reduce 11

	public  goto 4


state 2
	file : file error . ';'  (2)

	';'  shift 5
	.  error


state 3
	public : PUBLIC .  (12)

	.  reduce 12


state 4
	file : file public . tipo ID ';'  (3)
	file : file public . CONST tipo ID ';'  (4)
	file : file public . tipo ID init  (5)
	file : file public . CONST tipo ID init  (6)
	file : file public . tipo ID $$1 finit  (8)
	file : file public . VOID ID $$2 finit  (10)

	VOID  shift 6
	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	CONST  shift 10
	.  error

	tipo  goto 11


state 5
	file : file error ';' .  (2)

	.  reduce 2


state 6
	file : file public VOID . ID $$2 finit  (10)

	ID  shift 12
	.  error


state 7
	tipo : INTEGER . ptr  (15)
	ptr : .  (13)

	'*'  shift 13
	ID  reduce 13

	ptr  goto 14


state 8
	tipo : STRING . ptr  (16)
	ptr : .  (13)

	'*'  shift 13
	ID  reduce 13

	ptr  goto 15


state 9
	tipo : NUMBER . ptr  (17)
	ptr : .  (13)

	'*'  shift 13
	ID  reduce 13

	ptr  goto 16


state 10
	file : file public CONST . tipo ID ';'  (4)
	file : file public CONST . tipo ID init  (6)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	.  error

	tipo  goto 17


state 11
	file : file public tipo . ID ';'  (3)
	file : file public tipo . ID init  (5)
	file : file public tipo . ID $$1 finit  (8)

	ID  shift 18
	.  error


state 12
	file : file public VOID ID . $$2 finit  (10)
	$$2 : .  (9)

	.  reduce 9

	$$2  goto 19


state 13
	ptr : '*' .  (14)

	.  reduce 14


state 14
	tipo : INTEGER ptr .  (15)

	.  reduce 15


state 15
	tipo : STRING ptr .  (16)

	.  reduce 16


state 16
	tipo : NUMBER ptr .  (17)

	.  reduce 17


state 17
	file : file public CONST tipo . ID ';'  (4)
	file : file public CONST tipo . ID init  (6)

	ID  shift 20
	.  error


state 18
	file : file public tipo ID . ';'  (3)
	file : file public tipo ID . init  (5)
	file : file public tipo ID . $$1 finit  (8)
	$$1 : .  (7)

	ATR  shift 21
	';'  shift 22
	'('  reduce 7

	init  goto 23
	$$1  goto 24


state 19
	file : file public VOID ID $$2 . finit  (10)

	'('  shift 25
	.  error

	finit  goto 26


state 20
	file : file public CONST tipo ID . ';'  (4)
	file : file public CONST tipo ID . init  (6)

	ATR  shift 21
	';'  shift 27
	.  error

	init  goto 28


state 21
	init : ATR . ID ';'  (18)
	init : ATR . INT ';'  (19)
	init : ATR . '-' INT ';'  (20)
	init : ATR . STR ';'  (21)
	init : ATR . CONST STR ';'  (22)
	init : ATR . REAL ';'  (23)
	init : ATR . '-' REAL ';'  (24)

	INT  shift 29
	REAL  shift 30
	ID  shift 31
	STR  shift 32
	CONST  shift 33
	'-'  shift 34
	.  error


state 22
	file : file public tipo ID ';' .  (3)

	.  reduce 3


state 23
	file : file public tipo ID init .  (5)

	.  reduce 5


state 24
	file : file public tipo ID $$1 . finit  (8)

	'('  shift 25
	.  error

	finit  goto 35


state 25
	finit : '(' . params ')' blocop  (25)
	finit : '(' . ')' blocop  (26)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	')'  shift 36
	.  error

	tipo  goto 37
	params  goto 38
	param  goto 39


state 26
	file : file public VOID ID $$2 finit .  (10)

	.  reduce 10


state 27
	file : file public CONST tipo ID ';' .  (4)

	.  reduce 4


state 28
	file : file public CONST tipo ID init .  (6)

	.  reduce 6


state 29
	init : ATR INT . ';'  (19)

	';'  shift 40
	.  error


state 30
	init : ATR REAL . ';'  (23)

	';'  shift 41
	.  error


state 31
	init : ATR ID . ';'  (18)

	';'  shift 42
	.  error


state 32
	init : ATR STR . ';'  (21)

	';'  shift 43
	.  error


state 33
	init : ATR CONST . STR ';'  (22)

	STR  shift 44
	.  error


state 34
	init : ATR '-' . INT ';'  (20)
	init : ATR '-' . REAL ';'  (24)

	INT  shift 45
	REAL  shift 46
	.  error


state 35
	file : file public tipo ID $$1 finit .  (8)

	.  reduce 8


state 36
	finit : '(' ')' . blocop  (26)

	';'  shift 47
	'{'  shift 48
	.  error

	blocop  goto 49
	bloco  goto 50


state 37
	param : tipo . ID  (35)

	ID  shift 51
	.  error


state 38
	finit : '(' params . ')' blocop  (25)
	params : params . ',' param  (30)

	')'  shift 52
	','  shift 53
	.  error


state 39
	params : param .  (29)

	.  reduce 29


state 40
	init : ATR INT ';' .  (19)

	.  reduce 19


state 41
	init : ATR REAL ';' .  (23)

	.  reduce 23


state 42
	init : ATR ID ';' .  (18)

	.  reduce 18


state 43
	init : ATR STR ';' .  (21)

	.  reduce 21


state 44
	init : ATR CONST STR . ';'  (22)

	';'  shift 54
	.  error


state 45
	init : ATR '-' INT . ';'  (20)

	';'  shift 55
	.  error


state 46
	init : ATR '-' REAL . ';'  (24)

	';'  shift 56
	.  error


state 47
	blocop : ';' .  (27)

	.  reduce 27


state 48
	bloco : '{' . $$3 decls list end '}'  (32)
	$$3 : .  (31)

	.  reduce 31

	$$3  goto 57


state 49
	finit : '(' ')' blocop .  (26)

	.  reduce 26


state 50
	blocop : bloco . ';'  (28)

	';'  shift 58
	.  error


state 51
	param : tipo ID .  (35)

	.  reduce 35


state 52
	finit : '(' params ')' . blocop  (25)

	';'  shift 47
	'{'  shift 48
	.  error

	blocop  goto 59
	bloco  goto 50


state 53
	params : params ',' . param  (30)

	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	.  error

	tipo  goto 37
	param  goto 60


state 54
	init : ATR CONST STR ';' .  (22)

	.  reduce 22


state 55
	init : ATR '-' INT ';' .  (20)

	.  reduce 20


state 56
	init : ATR '-' REAL ';' .  (24)

	.  reduce 24


state 57
	bloco : '{' $$3 . decls list end '}'  (32)
	decls : .  (33)

	.  reduce 33

	decls  goto 61


state 58
	blocop : bloco ';' .  (28)

	.  reduce 28


state 59
	finit : '(' params ')' blocop .  (25)

	.  reduce 25


state 60
	params : params ',' param .  (30)

	.  reduce 30


state 61
	bloco : '{' $$3 decls . list end '}'  (32)
	decls : decls . param ';'  (34)

	error  shift 62
	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	DO  shift 67
	IF  shift 68
	FOR  shift 69
	INTEGER  shift 7
	STRING  shift 8
	NUMBER  shift 9
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	';'  shift 77
	'{'  shift 48
	.  error

	tipo  goto 37
	bloco  goto 78
	param  goto 79
	base  goto 80
	list  goto 81
	lv  goto 82
	expr  goto 83


state 62
	base : error . ';'  (50)

	';'  shift 84
	.  error


state 63
	expr : INT .  (68)

	.  reduce 68


state 64
	expr : REAL .  (70)

	.  reduce 70


state 65
	lv : ID .  (63)
	lv : ID . '[' expr ']'  (64)
	expr : ID . '(' args ')'  (93)
	expr : ID . '(' ')'  (94)

	'['  shift 85
	'('  shift 86
	DO  reduce 63
	THEN  reduce 63
	UPTO  reduce 63
	DOWNTO  reduce 63
	STEP  reduce 63
	INCR  reduce 63
	DECR  reduce 63
	ATR  reduce 63
	'|'  reduce 63
	'&'  reduce 63
	'='  reduce 63
	NE  reduce 63
	GE  reduce 63
	LE  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'!'  reduce 63
	';'  reduce 63
	')'  reduce 63
	','  reduce 63
	'#'  reduce 63
	']'  reduce 63


state 66
	expr : STR .  (69)

	.  reduce 69


state 67
	base : DO . $$4 stmt WHILE expr ';'  (40)
	$$4 : .  (39)

	.  reduce 39

	$$4  goto 87


state 68
	base : IF . expr THEN stmt  (45)
	base : IF . expr THEN stmt ELSE stmt  (46)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	lv  goto 88
	expr  goto 89


state 69
	base : FOR . lv IN expr UPTO expr step DO $$5 stmt  (42)
	base : FOR . lv IN expr DOWNTO expr step DO $$6 stmt  (44)

	ID  shift 90
	.  error

	lv  goto 91


state 70
	expr : INCR . lv  (75)

	ID  shift 90
	.  error

	lv  goto 92


state 71
	expr : DECR . lv  (76)

	ID  shift 90
	.  error

	lv  goto 93


state 72
	expr : '&' . lv  (73)

	ID  shift 90
	.  error

	lv  goto 94


state 73
	expr : '~' . expr  (72)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	lv  goto 88
	expr  goto 95


state 74
	expr : '-' . expr  (71)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	lv  goto 88
	expr  goto 96


state 75
	expr : '*' . lv  (66)

	ID  shift 90
	.  error

	lv  goto 97


state 76
	expr : '(' . expr ')'  (92)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	lv  goto 88
	expr  goto 98


state 77
	base : ';' .  (38)

	.  reduce 38


state 78
	base : bloco .  (48)

	.  reduce 48


state 79
	decls : decls param . ';'  (34)

	';'  shift 99
	.  error


state 80
	list : base .  (59)

	.  reduce 59


state 81
	bloco : '{' $$3 decls list . end '}'  (32)
	list : list . base  (60)
	end : .  (51)

	error  shift 62
	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	DO  shift 67
	IF  shift 68
	FOR  shift 69
	BREAK  shift 100
	CONTINUE  shift 101
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	';'  shift 77
	'{'  shift 48
	'}'  reduce 51

	bloco  goto 78
	base  goto 102
	end  goto 103
	brk  goto 104
	lv  goto 82
	expr  goto 83


state 82
	base : lv . '#' expr ';'  (49)
	expr : lv .  (65)
	expr : lv . ATR expr  (67)
	expr : lv . INCR  (77)
	expr : lv . DECR  (78)

	INCR  shift 105
	DECR  shift 106
	ATR  shift 107
	'#'  shift 108
	'|'  reduce 65
	'&'  reduce 65
	'='  reduce 65
	NE  reduce 65
	GE  reduce 65
	LE  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	'!'  reduce 65
	';'  reduce 65


state 83
	base : expr . ';'  (47)
	expr : expr . '!'  (74)
	expr : expr . '+' expr  (79)
	expr : expr . '-' expr  (80)
	expr : expr . '*' expr  (81)
	expr : expr . '/' expr  (82)
	expr : expr . '%' expr  (83)
	expr : expr . '<' expr  (84)
	expr : expr . '>' expr  (85)
	expr : expr . GE expr  (86)
	expr : expr . LE expr  (87)
	expr : expr . NE expr  (88)
	expr : expr . '=' expr  (89)
	expr : expr . '&' expr  (90)
	expr : expr . '|' expr  (91)

	'|'  shift 109
	'&'  shift 110
	'='  shift 111
	NE  shift 112
	GE  shift 113
	LE  shift 114
	'>'  shift 115
	'<'  shift 116
	'+'  shift 117
	'-'  shift 118
	'*'  shift 119
	'/'  shift 120
	'%'  shift 121
	'!'  shift 122
	';'  shift 123
	.  error


state 84
	base : error ';' .  (50)

	.  reduce 50


state 85
	lv : ID '[' . expr ']'  (64)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	.  error

	lv  goto 88
	expr  goto 124


state 86
	expr : ID '(' . args ')'  (93)
	expr : ID '(' . ')'  (94)

	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	')'  shift 125
	.  error

	args  goto 126
	lv  goto 88
	expr  goto 127


state 87
	base : DO $$4 . stmt WHILE expr ';'  (40)

	error  shift 62
	INT  shift 63
	REAL  shift 64
	ID  shift 65
	STR  shift 66
	DO  shift 67
	IF  shift 68
	FOR  shift 69
	BREAK  shift 100
	CONTINUE  shift 101
	INCR  shift 70
	DECR  shift 71
	'&'  shift 72
	'~'  shift 73
	'-'  shift 74
	'*'  shift 75
	'('  shift 76
	';'  shift 77
	'{'  shift 48
	.  error

	bloco  goto 78
	base  goto 128
	stmt  goto 129
	brk  goto 130
	lv  goto 82
	expr  goto 83


state 88
	expr : lv .  (65)
	expr : lv . ATR expr  (67)
	expr : lv . INCR  (77)
	expr : lv . DECR  (78)
